# chesnok.uz

./: .env  README.md  pyproject.toml  schemas.py  utils.py
alembic/: env.py
alembic/versions/: b72dbff6121e_created_database.py
app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py  models.py  schemas.py  utils.py  weather.py
app/admin/: auth.py  settings.py  views.py
app/routers/: __init__.py  auth.py  categories.py  category.py  common.py  database.py  gwt.py  lesson.py  main.py  posts.py  profession.py  register.py  seeds.py  session.py  tag.py  tags.py  txt.txt  users.py  weather.py
app/routers/auth/: gwt.py  session.py
app/schemas/: __init__.py  auth.py  common.py  schemas.py
